Select menu alignment bugfix + add label alignment

--- a/client/src/components/form/selects/region-select/style.module.css
+++ b/client/src/components/form/selects/region-select/style.module.css
@@ -1,3 +1,10 @@
+.wrapper.alignLeft {
+  display: grid;
+  grid-template-columns: var(--label-width, min-content) 1fr;
+  grid-column-gap: 8px;
+  align-items: center;
+}
+
 .caption {
   --height: 20px;
     overflow: hidden;
@@ -10,4 +17,11 @@
     text-overflow: ellipsis;
     margin-bottom: 4px;
     font-weight: bold;
+}
+
+@media screen and (max-width: 480px) {
+  .wrapper.alignLeft {
+    grid-template-columns: 1fr;
+    grid-row-gap: 4px;
+  }
 }
